--- a/src/System.Security.Cryptography.Pkcs/src/System.Security.Cryptography.Pkcs.csproj
+++ b/src/System.Security.Cryptography.Pkcs/src/System.Security.Cryptography.Pkcs.csproj
@@ -279,13 +279,6 @@
       <Link>Common\System\Security\Cryptography\Asn1\Rc2CbcParameters.manual.cs</Link>
       <DependentUpon>$(CommonPath)\System\Security\Cryptography\Asn1\Rc2CbcParameters.xml</DependentUpon>
     </Compile>
-    <AsnXml Include="$(CommonPath)\System\Security\Cryptography\Asn1\SignedAttributesSet.xml">
-      <Link>Common\System\Security\Cryptography\Asn1\SignedAttributesSet.xml</Link>
-    </AsnXml>
-    <Compile Include="$(IntermediateOutputPath)asnxml\SignedAttributesSet.cs">
-      <Link>Common\System\Security\Cryptography\Asn1\SignedAttributesSet.cs</Link>
-      <DependentUpon>$(CommonPath)\System\Security\Cryptography\Asn1\SignedAttributesSet.xml</DependentUpon>
-    </Compile>
     <Compile Include="$(CommonPath)\System\Security\Cryptography\Asn1\SubjectPublicKeyInfoAsn.cs">
       <Link>Common\System\Security\Cryptography\Asn1\SubjectPublicKeyInfoAsn.cs</Link>
     </Compile>
@@ -300,6 +293,11 @@
     <Compile Include="System\Security\Cryptography\Pkcs\Asn1\Rfc3161TimeStampReq.cs" />
     <Compile Include="System\Security\Cryptography\Pkcs\Asn1\Rfc3161TimeStampResp.cs" />
     <Compile Include="System\Security\Cryptography\Pkcs\Asn1\Rfc3161TstInfo.cs" />
+    <AsnXml Include="System\Security\Cryptography\Pkcs\Asn1\SignedAttributesSet.xml" />
+    <Compile Include="$(IntermediateOutputPath)asnxml\SignedAttributesSet.cs">
+      <Link>System\Security\Cryptography\Pkcs\Asn1\SignedAttributesSet.cs</Link>
+      <DependentUpon>System\Security\Cryptography\Pkcs\Asn1\SignedAttributesSet.xml</DependentUpon>
+    </Compile>
     <Compile Include="System\Security\Cryptography\Pkcs\Asn1\SignedDataAsn.cs" />
     <Compile Include="System\Security\Cryptography\Pkcs\Asn1\SignerIdentifierAsn.cs" />
     <Compile Include="System\Security\Cryptography\Pkcs\Asn1\SignerInfoAsn.cs" />
