Implement VBMath module
This module implements a VB6 compatible random number generator.

This code is a verbatim port of the Reference Source, with a couple
comments fixed.  The tests are new.

Relates to issue #31181.

--- a/src/Microsoft.VisualBasic/tests/Microsoft.VisualBasic.Tests.csproj
+++ b/src/Microsoft.VisualBasic/tests/Microsoft.VisualBasic.Tests.csproj
@@ -26,6 +26,7 @@
     <Compile Include="DateAndTimeTests.cs" />
     <Compile Include="InformationTests.cs" />
     <Compile Include="UtilsTests.cs" />
+    <Compile Include="VBMathTests.cs" />
     <Compile Include="StringsTests.cs" />
   </ItemGroup>
   <ItemGroup>
