--- a/src/Common/src/System/Security/Cryptography/Asn1/AsnXml.targets
+++ b/src/Common/src/System/Security/Cryptography/Asn1/AsnXml.targets
@@ -8,9 +8,11 @@
     </None>
   </ItemGroup>
 
+  <!-- MSBuild for .NET Core doesn't support XslTransform at this time -->
   <Target Name="CompileAsn" BeforeTargets="CoreCompile"
+    Condition="'$(RunningOnCore)' != 'true'"
     Inputs="@(AsnXml);$(MSBuildThisFileDirectory)asn.xslt"
-    Outputs="@(AsnXml -> '$(IntermediateOutputPath)asnxml\%(filename).cs')">
+    Outputs="%(Identity).cs">
 
     <MakeDir Directories="$(IntermediateOutputPath)asnxml" />
 
@@ -18,5 +20,24 @@
       XslInputPath="$(MSBuildThisFileDirectory)asn.xslt"
       XmlInputPaths="@(AsnXml)"
       OutputPaths="@(AsnXml -> '$(IntermediateOutputPath)asnxml\%(filename).cs')" />
+
+    <Exec Condition="'$(OS)' == 'Windows_NT'"
+      IgnoreExitCode="true"
+      StandardOutputImportance="Low"
+      Command="$(SystemRoot)\System32\fc.exe /a @(AsnXml -> '$(IntermediateOutputPath)asnxml\%(filename).cs') @(AsnXml -> '%(Identity).cs')">
+      <Output TaskParameter="ExitCode" ItemName="_AsnXmlDiffCode" />
+    </Exec>
+
+    <!-- TODO: Call diff on Unix -->
+    <ItemGroup Condition="'$(OS)' != 'Windows_NT'">
+      <_AsnXmlDiffCode Include="1" />
+    </ItemGroup>
+
+    <Copy
+      Condition="'@(_AsnXmlDiffCode)' != '0'"
+      SourceFiles="@(AsnXml -> '$(IntermediateOutputPath)asnxml\%(filename).cs')" 
+      DestinationFiles="@(AsnXml -> '%(Identity).cs')" />
+    
+    <Warning Condition="'@(_AsnXmlDiffCode)' != '0'" Text="AsnXml regenerated files, be sure to check them in: @(AsnXml -> '%(Identity).cs')" />
   </Target>
 </Project>  
