--- a/src/Common/src/System/Security/Cryptography/Asn1/AsnXml.targets
+++ b/src/Common/src/System/Security/Cryptography/Asn1/AsnXml.targets
@@ -21,7 +21,7 @@
       XmlInputPaths="@(AsnXml)"
       OutputPaths="@(AsnXml -> '$(IntermediateOutputPath)asnxml\%(filename).cs')" />
 
-    <Exec Condition="'$(OS)' == 'Windows_NT'"
+    <Exec Condition="'$(RunningOnUnix)' != 'true'"
       IgnoreExitCode="true"
       StandardOutputImportance="Low"
       Command="$(SystemRoot)\System32\fc.exe /a @(AsnXml -> '$(IntermediateOutputPath)asnxml\%(filename).cs') @(AsnXml -> '%(Identity).cs')">
@@ -29,7 +29,7 @@
     </Exec>
 
     <!-- TODO: Call diff on Unix -->
-    <ItemGroup Condition="'$(OS)' != 'Windows_NT'">
+    <ItemGroup Condition="'$(RunningOnUnix)' == 'true'">
       <_AsnXmlDiffCode Include="1" />
     </ItemGroup>
 
