--- a/src/shims/manual/Directory.Build.props
+++ b/src/shims/manual/Directory.Build.props
@@ -26,5 +26,6 @@
     <IsRuntimeAssembly>true</IsRuntimeAssembly>
     <HasMatchingContract>true</HasMatchingContract>
     <ContractAssemblyPath>$(NetFxRefPath)$(MSBuildProjectName).dll</ContractAssemblyPath>
+    <DefineConstants Condition="'$(TargetsNetCoreApp)' == 'true'">$(DefineConstants);netcoreapp</DefineConstants>
   </PropertyGroup>
 </Project>
