--- a/src/System.ValueTuple/src/Configurations.props
+++ b/src/System.ValueTuple/src/Configurations.props
@@ -1,16 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <PackageConfigurations>
-      netstandard1.0;
-      net461;
-      net47;
-    </PackageConfigurations>
     <BuildConfigurations>
-      $(PackageConfigurations);
       netcoreapp;
-      uap-Windows_NT;
-      _netcoreapp2.0;
+      uap;
       _netfx;
     </BuildConfigurations>
   </PropertyGroup>
