--- a/src/System.Runtime.Numerics/tests/Performance/System.Runtime.Numerics.Performance.Tests.csproj
+++ b/src/System.Runtime.Numerics/tests/Performance/System.Runtime.Numerics.Performance.Tests.csproj
@@ -1,11 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <ProjectGuid>{3842BE38-1A99-41B2-81B5-186E64077B95}</ProjectGuid>
     <DisableTests Condition="'$(TargetGroup)' == 'uap' AND ('$(ArchGroup)' == 'arm' OR '$(ArchGroup)' == 'arm64')">true</DisableTests>
     <Configurations>netcoreapp-Debug;netcoreapp-Release;netstandard-Debug;netstandard-Release</Configurations>
   </PropertyGroup>
   <ItemGroup Condition="'$(DisableTests)' != 'true'">
-    <Compile Include="PerformanceTests.cs" />
     <Compile Include="Perf.BigInteger.cs" />
     <Compile Include="Perf.BigInteger.netcoreapp.cs" Condition="'$(TargetGroup)' == 'netcoreapp'" />
     <Compile Include="$(CommonTestPath)\System\PerfUtils.cs">
