--- a/src/System.Reflection.Metadata/tests/Configurations.props
+++ b/src/System.Reflection.Metadata/tests/Configurations.props
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <BuildConfigurations>
       netcoreapp;
+      netfx;
+      netstandard;
     </BuildConfigurations>
   </PropertyGroup>
 </Project>
